--- a/src/app/dashboard/customer/customer-details/customer-detail.component.html
+++ b/src/app/dashboard/customer/customer-details/customer-detail.component.html
@@ -2,11 +2,16 @@
     <div class="row">
         <div class="col-md-12">
             <div class="card">
-                <div style="margin:15px 25px;">
-                    <div style="margin: 20px 0px;display: inline-block;font-size: 18px;">Add New Customer</div>
-                    <a [routerLink]="['../']" class="btn btn-danger btn-round" style="float:right;">Save</a>
+                <div class="card-header" data-background-color="red">
+                    <h4 class="title">Add New Customer</h4>
                 </div>
                 <div class="card-content">
+                    <div class="row">
+                        <div class="col-md-12">
+                        <!-- <div style="margin: 20px 0px;display: inline-block;font-size: 18px;">Add New Customer</div> -->
+                            <a [routerLink]="['../']" class="btn btn-danger btn-round" style="float:right;">Save</a>
+                        </div>
+                    </div>
                     <form>
                         <div class="row">
                             <div class="col-md-3">
