--- a/src/app/dashboard/user/add-user/add-user.component.html
+++ b/src/app/dashboard/user/add-user/add-user.component.html
@@ -1,4 +1,3 @@
-
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
@@ -9,7 +8,7 @@
                             <p class="category" style="margin-top:15px;margin-left: 20px;"><b>Create User</b></p>
                         </div>
                         <div class="col-md-2">
-                            <button class="btn btn-danger btn-round" onclick="demo.showNotification('top','right')">Save</button>
+                            <button class="btn btn-danger btn-round" onclick="demo.showNotification('top','right')" [routerLink]="['../']">Save</button>
                         </div>
                     </div>
                     <div class="card-content table-responsive">
@@ -124,5 +123,5 @@
                 </div>
             </div>
         </div>
-<!--****************************************************************************************************-->
-
+    </div>
+</div>
