--- a/src/app/dashboard/user/user-management/user-management.component.html
+++ b/src/app/dashboard/user/user-management/user-management.component.html
@@ -16,7 +16,7 @@
                             <input type="text" class="form-control" id="exampleInputName3" placeholder="Search" style="margin-top:15px;">
                         </div>
                         <div class="col-md-2">
-                            <button class="btn btn-danger btn-round" onclick="demo.showNotification('top','right')">Create user</button>
+                            <a href="#pablo" class="btn btn-danger btn-round"  [routerLink]="['addUser']">Create user</a>
                         </div>
                     </div>
                     <div class="card-content table-responsive">
