--- a/src/app/login/sign-in/sign-in.component.html
+++ b/src/app/login/sign-in/sign-in.component.html
@@ -1,7 +1,31 @@
-<p>
-  sign-in works!
-  asdas
-  asdasdasd
-  as
-  
-</p>
+<div class="main-content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-header" data-background-color="red">
+            <h4 class="title" style="text-align:center;">Login</h4>
+          </div>
+          <div class="card-content table-responsive">
+            <div class="col-md-12">
+              <input type="text" class="form-control" id="exampleInputAmount" placeholder="Username" style="text-align:center;">
+            </div>
+            <div class="col-md-12">
+              <input type="text" class="form-control" id="exampleInputAmount" placeholder="Password" style="text-align:center;margin-top:15px;">
+            </div>
+            <div class="col-md-12" style="text-align:center;margin-top:8px;">
+              <label><a href="#" style="color:lightgray;">Forgot Password?</a></label>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4" style="margin-top:10px;">
+              <button class="btn btn-danger btn-round" onclick="demo.showNotification('top','right')">Login</button>
+            </div>
+            <div class="col-md-4"></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
+</div>
