--- a/src/app/dashboard/notifications/notifications.component.html
+++ b/src/app/dashboard/notifications/notifications.component.html
@@ -97,5 +97,103 @@
 </div>  -->
 
 <div class="main-content">
-    <h1>In progress...</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header" data-background-color="red">
+                    Service Tracker
+                </div>
+                <div class="card-content">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="col-md-3">
+                                <div style="width:30px;height:20px;background:green;"></div>
+                            </div>
+                            <div class="col-md-9">
+                                <label>Planned Service</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="col-md-3">
+                                <div style="width:30px;height:20px;background:blue;"></div>
+                            </div>
+                            <div class="col-md-9">
+                                <label>Unplanned Service</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="col-md-3">
+                                <div style="width:30px;height:20px;background:red;"></div>
+                            </div>
+                            <div class="col-md-9">
+                                <label>Skipped Stops</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="col-md-3">
+                                <div style="width:30px;height:20px;background:yellow;"></div>
+                            </div>
+                            <div class="col-md-9">
+                                <label>Did not Service</label>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="row">
+                                <div class="col-md-4 padding-top">
+                                    <div>
+                                        <label>Date</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-8">
+                                    <div>
+                                        <date-picker></date-picker>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4 padding-top">
+                                    <div>
+                                        <label>Route</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-8">
+                                    <div>
+                                        <select class="form-control">
+                                            <option value="volvo">801</option>
+                                            <option value="saab">802</option>
+                                            <option value="opel">803</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4 padding-top">
+                                    <div>
+                                        <label>Trip</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-8">
+                                    <div>
+                                        <select class="form-control">
+                                            <option value="volvo">1</option>
+                                            <option value="saab">2</option>
+                                            <option value="opel">3</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <img src="/assets/img/Tracker-Map.PNG">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
