--- a/src/app/dashboard/report/report.component.html
+++ b/src/app/dashboard/report/report.component.html
@@ -141,7 +141,7 @@
                         <div class="col-md-8">
                         </div>
                         <div class="col-md-2 padding-top text-right">
-                            Report Type
+                            <label>Report Type</label>
                         </div>
                         <div class="col-md-2">
                             <select class="form-control">
