--- a/src/app/dashboard/report/report.component.html
+++ b/src/app/dashboard/report/report.component.html
@@ -138,14 +138,14 @@
                 </div>
                 <div class="card-content">
                     <div class="row">
-                        <div class="col-md-8">
+                        <div class="col-md-6">
                         </div>
-                        <div class="col-md-2 padding-top text-right">
+                        <div class="col-md-3 padding-top text-right">
                             <label>Report Type</label>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-3">
                             <select class="form-control">
-                                <option value="volvo">Sale Report</option>
+                                <option value="volvo">Sales Report</option>
                                 <option value="volvo">Deposit Report</option>
                                 <option value="volvo">Delivery Report</option>
                                 <option value="volvo">Route Settlement</option>
