--- a/src/app/dashboard/customer/customer-management/customer-management.component.html
+++ b/src/app/dashboard/customer/customer-management/customer-management.component.html
@@ -39,7 +39,7 @@
                                     <tr *ngFor="let customer of customers">
                                         <td>{{customer.customerId}}</td>
                                         <td>{{customer.customerName}}</td>
-                                        <td class="text-danger">{{customer.isReddyIceCustomer}}</td>
+                                        <td class="text-danger">{{customer.isReddyIceCustome}}</td>
                                         <td><a [routerLink]="['./edit']"><span class="glyphicon glyphicon-edit"></span></a></td>
                                     </tr>
                                 </tbody>
