--- a/src/app/dashboard/notifications/notifications.component.html
+++ b/src/app/dashboard/notifications/notifications.component.html
@@ -139,56 +139,43 @@
                         </div>
                     </div>
                     <hr>
-                    
+
                     <hr>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="row">
-                                <div class="col-md-4 padding-top">
-                                    <div>
-                                        <label>Date</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-8">
-                                    <div>
-                                        <date-picker></date-picker>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4 padding-top">
-                                    <div>
-                                        <label>Route</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-8">
-                                    <div>
-                                        <select class="form-control">
-                                            <option value="volvo">801</option>
-                                            <option value="saab">802</option>
-                                            <option value="opel">803</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4 padding-top">
-                                    <div>
-                                        <label>Trip</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-8">
-                                    <div>
-                                        <select class="form-control">
-                                            <option value="volvo">1</option>
-                                            <option value="saab">2</option>
-                                            <option value="opel">3</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
+                   <div class="col-md-12">
+                    <div class="col-md-4">
+                        <span class="col-md-4">
+                             <label>Date</label>
+                        </span>
+                        <span class="col-md-8">
+                            <date-picker></date-picker>
+                        </span>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="col-md-4">
+                             <label class>Route</label>
+                        </span>
+                        <span class="col-md-8">
+                             <select class="form-control">
+                                <option value="volvo">801</option>
+                                <option value="saab">802</option>
+                                <option value="opel">803</option>
+                            </select>
+                        </span>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="col-md-4">
+                             <label>Trip</label>
+                        </span>
+                        <span class="col-md-8">
+                             <select class="form-control">
+                                <option value="volvo">1</option>
+                                <option value="saab">2</option>
+                                <option value="opel">3</option>
+                            </select>
+                        </span>
+                    </div>
+                   </div>
+                        <div class="col-md-12" style="margin-top:10px;">
                             <img src="/assets/img/Tracker-Map.PNG">
                         </div>
                     </div>
@@ -196,4 +183,3 @@
             </div>
         </div>
     </div>
-</div>
