--- a/src/app/dashboard/typography/typography.component.html
+++ b/src/app/dashboard/typography/typography.component.html
@@ -81,40 +81,40 @@
                                         <td>311</td>
                                         <td>311</td>
                                         <td>
-                                            <span class="glyphicon glyphicon-edit" style="font-size:20px;"></span>
-                                            <span class="glyphicon glyphicon-trash" style="font-size:20px;margin-left:20px;"></span>
+                                            <span class="glyphicon glyphicon-edit" ></span>
+                                            <span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>322</td>
                                         <td>322</td>
                                         <td>
-                                            <span class="glyphicon glyphicon-edit" style="font-size:20px;"></span>
-                                            <span class="glyphicon glyphicon-trash" style="font-size:20px;margin-left:20px;"></span>
+                                            <span class="glyphicon glyphicon-edit" ></span>
+                                            <span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>333</td>
                                         <td>333</td>
                                         <td>
-                                            <span class="glyphicon glyphicon-edit" style="font-size:20px;"></span>
-                                            <span class="glyphicon glyphicon-trash" style="font-size:20px;margin-left:20px;"></span>
+                                            <span class="glyphicon glyphicon-edit" ></span>
+                                            <span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>334</td>
                                         <td>334</td>
                                         <td>
-                                            <span class="glyphicon glyphicon-edit" style="font-size:20px;"></span>
-                                            <span class="glyphicon glyphicon-trash" style="font-size:20px;margin-left:20px;"></span>
+                                           <span class="glyphicon glyphicon-edit" ></span>
+                                            <span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>335</td>
                                         <td>335</td>
                                         <td>
-                                            <span class="glyphicon glyphicon-edit" style="font-size:20px;"></span>
-                                            <span class="glyphicon glyphicon-trash" style="font-size:20px;margin-left:20px;"></span>
+                                            <span class="glyphicon glyphicon-edit" ></span>
+                                            <span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span>
                                         </td>
                                     </tr>
                                 </tbody>
